fix progress steps alignment and switch issue

--- a/app/assets/stylesheets/progress.less
+++ b/app/assets/stylesheets/progress.less
@@ -15,6 +15,7 @@ form {
 
 .progress-steps {
   position:relative;
+  margin: 0px 0 20px 0;
 
   .progress-timeline {
     height:4px;
